--- a/source/posts/templates/posts/base.html
+++ b/source/posts/templates/posts/base.html
@@ -49,7 +49,13 @@
                 <ul class="navbar-nav ml-auto">
                     {% block navbar %}{% endblock %}
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#">Dashboard</a>
+                        <a class="nav-link page-scroll" href="{% url 'posts:list' %}">Feed</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="{% url 'forum:index' %}">Forum</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="{% url 'accounts:dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="{% url 'accounts:logout' %}">Logout</a>
@@ -84,7 +90,7 @@
                 <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://twitter.com/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -92,7 +98,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://www.facebook.com/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -100,7 +106,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://github.com/" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
