--- a/source/posts/templates/posts/post_list.html
+++ b/source/posts/templates/posts/post_list.html
@@ -16,9 +16,6 @@
     <li class="nav-item">
 		<a class="nav-link page-scroll" href="{% url 'posts:create' %}">Create</a>
 	</li>
-	<li class="nav-item">
-        <a class="nav-link page-scroll" href="#">Forum</a>
-    </li>
 {% endblock %}
 
 {% block heading %}
@@ -43,7 +40,7 @@
                     {{ post.title }}
                 </h2>
             </a>
-            <p class="post-meta">Posted by <a href="#">{% if post.user.get_full_name %}{{ post.user.get_full_name }}{% endif %}</a> on {{ post.timestamp }}</p>
+            <p class="post-meta">Posted by <a href="#">{% if post.user.get_full_name %}{{ post.user.username }}{% endif %}</a> on {{ post.timestamp }}</p>
         </div>
         <hr>
 	{% endfor %}
